welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: identifier expected but '(' found.
	for (i <- 0 to nums.(4)) {
                            ^